src/test/ui/type-alias-impl-trait/inference-cycle.stderr
error[E0391]: cycle detected when computing type of `m::Foo::{opaque#0}`
  --> $DIR/inference-cycle.rs:5:16
   |
LL |     type Foo = impl std::fmt::Debug;
   |                ^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires type-checking `m::bar`...
  --> $DIR/inference-cycle.rs:15:5
   |
LL |     pub fn bar() {
   |     ^^^^^^^^^^^^
   = note: ...which again requires computing type of `m::Foo::{opaque#0}`, completing the cycle
note: cycle used when checking item types in module `m`
  --> $DIR/inference-cycle.rs:4:1
   |
LL | mod m {
   | ^^^^^

error[E0391]: cycle detected when computing type of `m::Foo::{opaque#0}`
  --> $DIR/inference-cycle.rs:5:16
   |
LL |     type Foo = impl std::fmt::Debug;
   |                ^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires type-checking `m::bar`...
  --> $DIR/inference-cycle.rs:15:5
   |
LL |     pub fn bar() {
   |     ^^^^^^^^^^^^
   = note: ...which again requires computing type of `m::Foo::{opaque#0}`, completing the cycle
note: cycle used when checking item types in module `m`
  --> $DIR/inference-cycle.rs:4:1
   |
LL | mod m {
   | ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0391`.
